==> eldar6776/DE-020717/fw/DE-170518/Src/LCDConf.c <==
#include "main.h"
#include "LCDConf.h"
#include "GUI.h"
#include "GUI_Private.h"
#include "GUIDRV_Lin.h"
#include "stm32746g_sdram.h"
#define ROTATION_0   0
#define ROTATION_CW  1
#define ROTATION_180 2
#define ROTATION_CCW 3
#define COLOR_MODE_ARGB8888 0 // GUICC_M8888I - GUIDRV_LIN_32
#define COLOR_MODE_RGB888   1 // GUICC_M888   - GUIDRV_LIN_24
#define COLOR_MODE_RGB565   2 // GUICC_M565   - GUIDRV_LIN_16
#define COLOR_MODE_ARGB1555 3 // GUICC_M1555I - GUIDRV_LIN_16
#define COLOR_MODE_ARGB4444 4 // GUICC_M4444I - GUIDRV_LIN_16
#define COLOR_MODE_L8       5 // GUICC_8666   - GUIDRV_LIN_8
#define COLOR_MODE_AL44     6 // GUICC_1616I  - GUIDRV_LIN_8
#define COLOR_MODE_AL88     7 // GUICC_88666I - GUIDRV_LIN_16
#define XSIZE_PHYS 480
#define YSIZE_PHYS 272
#define NUM_BUFFERS  3 // Number of multiple buffers to be used (at least 1 buffer)
#define NUM_VSCREENS 1 // Number of virtual  screens to be used (at least 1 screen)
#define GUI_NUM_LAYERS 2
#define USE_TOUCH   1
#define USE_TOUCH   0
#define TOUCH_X_MIN 0x0000
#define TOUCH_X_MAX 0x01E0
#define TOUCH_Y_MIN 0x0000
#define TOUCH_Y_MAX 0x0110
#define VRAM_ADDR 			0xC0000000
#define VRAM_BUFER_SIZE 	0x00200000	// 2MB for one layer frame buffers
#define DMA2D_BUFFER_ADDR 	0x20000000
#define COLOR_MODE_0 COLOR_MODE_RGB565
#define XSIZE_0 480
#define YSIZE_0 272
#define ORIENTATION_0 ROTATION_0
#define COLOR_MODE_1 COLOR_MODE_ARGB8888
#define XSIZE_1 480
#define YSIZE_1 272
#define ORIENTATION_1 ROTATION_0

static U32 _GetPixelformat(int LayerIndex) 
{
	const LCD_API_COLOR_CONV * pColorConvAPI;

	if (LayerIndex >= GUI_COUNTOF(_apColorConvAPI)) 
	{
		return 0;
	}
	
	pColorConvAPI = _apColorConvAPI[LayerIndex];

	if		(pColorConvAPI == GUICC_M8888I) return LTDC_PIXEL_FORMAT_ARGB8888;
	else if (pColorConvAPI == GUICC_M888) 	return LTDC_PIXEL_FORMAT_RGB888;
	else if (pColorConvAPI == GUICC_M565)	return LTDC_PIXEL_FORMAT_RGB565;
	else if (pColorConvAPI == GUICC_M1555I) return LTDC_PIXEL_FORMAT_ARGB1555;
	else if (pColorConvAPI == GUICC_M4444I) return LTDC_PIXEL_FORMAT_ARGB4444;
	else if (pColorConvAPI == GUICC_8666)	return LTDC_PIXEL_FORMAT_L8;
	else if (pColorConvAPI == GUICC_1616I)	return LTDC_PIXEL_FORMAT_AL44;
	else if (pColorConvAPI == GUICC_88666I) return LTDC_PIXEL_FORMAT_AL88;
	
	while (1); // Error
}

static void _DMA_Index2ColorBulk(void * pIndex, LCD_COLOR * pColor, U32 NumItems, U8 SizeOfIndex, U32 PixelFormat) 
{
	_DMA_ConvertColor(pIndex, _pBuffer_DMA2D, PixelFormat, LTDC_PIXEL_FORMAT_ARGB8888, NumItems);	// Use DMA2D for the conversion
	_InvertAlpha_SwapRB(_pBuffer_DMA2D, pColor, NumItems);											// Convert colors from ARGB to ABGR and invert alpha values
}

static void _DMA_Color2IndexBulk(LCD_COLOR * pColor, void * pIndex, U32 NumItems, U8 SizeOfIndex, U32 PixelFormat) 
{
	_InvertAlpha_SwapRB(pColor, _pBuffer_DMA2D, NumItems);											// Convert colors from ABGR to ARGB and invert alpha values
	_DMA_ConvertColor(_pBuffer_DMA2D, pIndex, LTDC_PIXEL_FORMAT_ARGB8888, PixelFormat, NumItems);	// Use DMA2D for the conversion
}

static void _LCD_DisplayOn(void) 
{
	__HAL_LTDC_ENABLE(&hltdc);	// Display On
//	HAL_GPIO_WritePin(GPIOI, GPIO_PIN_12, GPIO_PIN_SET);
//	HAL_GPIO_WritePin(GPIOK, GPIO_PIN_3,  GPIO_PIN_SET);
	HAL_GPIO_WritePin(GPIOE, GPIO_PIN_2,  GPIO_PIN_SET);
}

static void _LCD_DisplayOff(void) 
{
	__HAL_LTDC_DISABLE(&hltdc);	// Display Off
//	HAL_GPIO_WritePin(GPIOI, GPIO_PIN_12, GPIO_PIN_RESET);
//	HAL_GPIO_WritePin(GPIOK, GPIO_PIN_3,  GPIO_PIN_RESET);
	HAL_GPIO_WritePin(GPIOE, GPIO_PIN_2,  GPIO_PIN_RESET);
}

int LCD_X_DisplayDriver(unsigned LayerIndex, unsigned Cmd, void * p) 
{
	int r = 0;

	switch (Cmd) 
	{
		case LCD_X_INITCONTROLLER:	// Called during the initialization process in order to set up the display controller and put it into operation.
		{
			_LCD_InitLayer(LayerIndex);
			break;
		}
		
		case LCD_X_SETORG: 			// Required for setting the display origin which is passed in the 'xPos' and 'yPos' element of p
		{
			LCD_X_SETORG_INFO * pSetOrgInfo;
			pSetOrgInfo = (LCD_X_SETORG_INFO *)p;
			_LCD_SetOrg(LayerIndex, pSetOrgInfo->xPos,pSetOrgInfo->yPos);
			break;
		}
		
		case LCD_X_SHOWBUFFER: 		// Required if multiple buffers are used. The 'Index' element of p contains the buffer index.
		{
			LCD_X_SHOWBUFFER_INFO * pShowBuffInfo;
			pShowBuffInfo = (LCD_X_SHOWBUFFER_INFO *)p;
			_aPendingBuffer[LayerIndex] = pShowBuffInfo->Index;
			break;
		}
		
		case LCD_X_SETLUTENTRY: 	// Required for setting a lookup table entry which is passed in the 'Pos' and 'Color' element of p
		{
			LCD_X_SETLUTENTRY_INFO * pSetLutEntryInfo;
			pSetLutEntryInfo = (LCD_X_SETLUTENTRY_INFO *)p;
			_LCD_SetLUTEntry(LayerIndex, pSetLutEntryInfo->Color, pSetLutEntryInfo->Pos);
			break;
		}
		
		case LCD_X_ON: 				// Required if the display controller should support switching on and off
		{
			_LCD_DisplayOn();
			break;
		}
		
		case LCD_X_OFF: 			// Required if the display controller should support switching on and off
		{
			_LCD_DisplayOff();
			break;
		}
		
		case LCD_X_SETVIS: 			// Required for setting the layer visibility which is passed in the 'OnOff' element of pData
		{
			LCD_X_SETVIS_INFO * pSetvisInfo;
			pSetvisInfo = (LCD_X_SETVIS_INFO *)p;
			_LCD_SetVis(LayerIndex, pSetvisInfo->OnOff);
			break;
		}
		
		case LCD_X_SETPOS: 			// Required for setting the layer position which is passed in the 'xPos' and 'yPos' element of pData
		{
			LCD_X_SETPOS_INFO * pSetposInfo;
			pSetposInfo = (LCD_X_SETPOS_INFO *)p;
			_LCD_SetLayerPos(LayerIndex, pSetposInfo->xPos, pSetposInfo->yPos);
			break;
		}
		
		case LCD_X_SETSIZE: 		// Required for setting the layer position which is passed in the 'xPos' and 'yPos' element of pData
		{
			int xPos, yPos;
			LCD_X_SETSIZE_INFO * pSetSizeInfo;
			GUI_GetLayerPosEx(LayerIndex, &xPos, &yPos);
			pSetSizeInfo = (LCD_X_SETSIZE_INFO *)p;
			
			if (LCD_GetSwapXYEx(LayerIndex)) 
			{
				_axSize[LayerIndex] = pSetSizeInfo->ySize;
				_aySize[LayerIndex] = pSetSizeInfo->xSize;
			} 
			else 
			{
				_axSize[LayerIndex] = pSetSizeInfo->xSize;
				_aySize[LayerIndex] = pSetSizeInfo->ySize;
			}
			
			_LCD_SetLayerSize(LayerIndex, xPos, yPos);
			break;
		}
		
		case LCD_X_SETALPHA: 		// Required for setting the alpha value which is passed in the 'Alpha' element of pData
		{
			LCD_X_SETALPHA_INFO * pSetAlphaInfo;
			pSetAlphaInfo = (LCD_X_SETALPHA_INFO *)p;
			_LCD_SetLayerAlpha(LayerIndex, pSetAlphaInfo->Alpha);
			break;
		}
		
		case LCD_X_SETCHROMAMODE:	// Required for setting the chroma mode which is passed in the 'ChromaMode' element of pData
		{
			LCD_X_SETCHROMAMODE_INFO * pSetChromaModeInfo;
			pSetChromaModeInfo = (LCD_X_SETCHROMAMODE_INFO *)p;
			_LCD_SetChromaMode(LayerIndex, pSetChromaModeInfo->ChromaMode);
			break;
		}
		
		case LCD_X_SETCHROMA:		// Required for setting the chroma value which is passed in the 'ChromaMin' and 'ChromaMax' element of pData
		{
			LCD_X_SETCHROMA_INFO * pSetChromaInfo;
			pSetChromaInfo = (LCD_X_SETCHROMA_INFO *)p;
			_LCD_SetChroma(LayerIndex, pSetChromaInfo->ChromaMin, pSetChromaInfo->ChromaMax);
			break;
		}
		
		default:
		{
			r = -1;
			break;
		}
	}
	
	return r;
}

void LCD_X_Config(void) 
{
	int i;
	//U32 PixelFormat;

	HAL_LTDC_DeInit(&hltdc);

	hltdc.Instance 					= LTDC;						// LTDC configuration
	hltdc.Init.HSPolarity 			= LTDC_HSPOLARITY_AL;		// Horizontal synchronization polarity as active low
	hltdc.Init.VSPolarity 			= LTDC_VSPOLARITY_AL;		// Vertical synchronization polarity as active low
	hltdc.Init.DEPolarity 			= LTDC_DEPOLARITY_AL;		// Data enable polarity as active low
	hltdc.Init.PCPolarity 			= LTDC_PCPOLARITY_IPC;		// Pixel clock polarity as input pixel clock
	hltdc.Init.Backcolor.Red   		= (BK_COLOR >>  0) & 0xFF;	// Configure R,G,B component values for LCD background color
	hltdc.Init.Backcolor.Green 		= (BK_COLOR >>  8) & 0xFF;
	hltdc.Init.Backcolor.Blue  		= (BK_COLOR >> 16) & 0xFF;
	hltdc.Init.HorizontalSync		= HSW;                    	// Horizontal synchronization width
	hltdc.Init.VerticalSync       	= VSW;                    	// Vertical synchronization height
	hltdc.Init.AccumulatedHBP     	= HBP;                    	// Accumulated horizontal back porch
	hltdc.Init.AccumulatedVBP     	= VBP;                    	// Accumulated vertical back porch
	hltdc.Init.AccumulatedActiveW 	= HBP + XSIZE_PHYS;       	// Accumulated active width
	hltdc.Init.AccumulatedActiveH 	= VBP + YSIZE_PHYS;       	// Accumulated active height
	hltdc.Init.TotalWidth         	= HBP + XSIZE_PHYS + HFP; 	// Total width
	hltdc.Init.TotalHeigh         	= VBP + YSIZE_PHYS + VFP;						// Total height	

	HAL_LTDC_Init(&hltdc); 										// Initialize LTDC
	HAL_LTDC_ProgramLineEvent(&hltdc, 0);						// Set LTDC interrupt event
	HAL_LTDC_EnableDither(&hltdc);								// Enable dithering	
	
	HAL_NVIC_SetPriority(LTDC_IRQn, 0xE, 0); 					// Set LTDC Interrupt to the lowest priority
	HAL_NVIC_EnableIRQ(LTDC_IRQn);								// Enable LTDC Interrupt
	
	HAL_NVIC_SetPriority(DMA2D_IRQn, 0xE, 0);					// Set DMA2DInterrupt to the lowest priority
	HAL_NVIC_EnableIRQ(DMA2D_IRQn);								// Enable DMA2D Interrupt	
	HAL_GPIO_WritePin(GPIOE, GPIO_PIN_2, GPIO_PIN_SET);			// Display enable
//	HAL_GPIO_WritePin(GPIOE, GPIO_PIN_5,  GPIO_PIN_SET);		// Display LED On
	
#if (NUM_BUFFERS > 1)
	
	for (i = 0; i < GUI_NUM_LAYERS; i++) 										// At first initialize use of multiple buffers on demand
	{
		GUI_MULTIBUF_ConfigEx(i, NUM_BUFFERS);
	}
#endif

	GUI_DEVICE_CreateAndLink(DISPLAY_DRIVER_0, COLOR_CONVERSION_0, 0, 0);					// Set display driver and color conversion for 1st layer

	if (LCD_GetSwapXYEx(0)) 																// Set size of 1st layer
	{
		LCD_SetSizeEx (0, YSIZE_0, XSIZE_0);
		LCD_SetVSizeEx(0, YSIZE_0 * NUM_VSCREENS, XSIZE_0);
	} 
	else
	{
		LCD_SetSizeEx (0, XSIZE_0, YSIZE_0);
		LCD_SetVSizeEx(0, XSIZE_0, YSIZE_0 * NUM_VSCREENS);
	}
	
#if (GUI_NUM_LAYERS > 1)

	GUI_DEVICE_CreateAndLink(DISPLAY_DRIVER_1, COLOR_CONVERSION_1, 0, 1);		// Set display driver and color conversion for 2nd layer

	if (LCD_GetSwapXYEx(1))														// Set size of 2nd layer
	{
		LCD_SetSizeEx (1, YSIZE_0, XSIZE_1);
		LCD_SetVSizeEx(1, YSIZE_1 * NUM_VSCREENS, XSIZE_1);
	} 
	else 
	{
		LCD_SetSizeEx (1, XSIZE_1, YSIZE_1);
		LCD_SetVSizeEx(1, XSIZE_1, YSIZE_1 * NUM_VSCREENS);
	}
#endif
	
	for (i = 0; i < GUI_NUM_LAYERS; i++)													// Setting up VRam address and remember pixel size
	{
		LCD_SetVRAMAddrEx(i, (void *)(_aAddr[i]));								// Setting up VRam address
		_aBytesPerPixels[i] = LCD_GetBitsPerPixelEx(i) >> 3;                  	// Remember pixel size
	}
	
	LCD_SetDevFunc(i, LCD_DEVFUNC_COPYBUFFER, (void(*)(void))_LCD_CopyBuffer);				// Set custom function for copying complete buffers (used by multiple buffering) using DMA2D
	LCD_SetDevFunc(i, LCD_DEVFUNC_COPYRECT, (void(*)(void))_LCD_CopyRect);					// Set custom function for copy recxtangle areas (used by GUI_CopyRect()) using DMA2D
	LCD_SetDevFunc(i, LCD_DEVFUNC_FILLRECT, (void(*)(void))_LCD_FillRect);					// Set custom function for filling operations using DMA2D
	LCD_SetDevFunc(i, LCD_DEVFUNC_DRAWBMP_32BPP, (void(*)(void))_LCD_DrawBitmap32bpp);		// Set up drawing routine for 32bpp bitmap using DMA2D. Makes only sense with ARGB8888 */
	LCD_SetDevFunc(i, LCD_DEVFUNC_DRAWBMP_16BPP, (void(*)(void))_LCD_DrawBitmap16bpp);		// Set up drawing routine for 16bpp bitmap using DMA2D. Makes only sense with RGB565
	LCD_SetDevFunc(i, LCD_DEVFUNC_DRAWBMP_8BPP, (void(*)(void))_LCD_DrawBitmap8bpp);		// Set up custom drawing routine for index based bitmaps using DMA2D
	
	/********************************************************************************************/
	/*		 			Set up custom color conversion using DMA2D, 							*/
	/*		works only for direct color modes because of missing LUT for DMA2D destination		*/
	/********************************************************************************************/
	GUICC_M1555I_SetCustColorConv	(_Color2IndexBulk_M1555I_DMA2D, _Index2ColorBulk_M1555I_DMA2D); 	// Set up custom bulk color conversion using DMA2D for ARGB1555
	GUICC_M565_SetCustColorConv  	(_Color2IndexBulk_M565_DMA2D,   _Index2ColorBulk_M565_DMA2D);   	// Set up custom bulk color conversion using DMA2D for RGB565 (does not speed up conversion, default method is slightly faster!)
	GUICC_M4444I_SetCustColorConv	(_Color2IndexBulk_M4444I_DMA2D, _Index2ColorBulk_M4444I_DMA2D); 	// Set up custom bulk color conversion using DMA2D for ARGB4444
	GUICC_M888_SetCustColorConv  	(_Color2IndexBulk_M888_DMA2D,   _Index2ColorBulk_M888_DMA2D);   	// Set up custom bulk color conversion using DMA2D for RGB888
	GUICC_M8888I_SetCustColorConv	(_Color2IndexBulk_M8888I_DMA2D, _Index2ColorBulk_M8888I_DMA2D); 	// Set up custom bulk color conversion using DMA2D for ARGB8888
	GUI_SetFuncAlphaBlending		(_DMA_AlphaBlending);     											// Required to load a bitmap palette into DMA2D CLUT in case of a 8bpp indexed bitmap                                           // Set up custom alpha blending function using DMA2D
	GUI_SetFuncGetpPalConvTable		(_LCD_GetpPalConvTable);											// Set up custom function for translating a bitmap palette into index values.
	GUI_SetFuncMixColors			(_DMA_MixColors);													// Set up a custom function for mixing up single colors using DMA2D
	GUI_SetFuncMixColorsBulk		(_LCD_MixColorsBulk);												// Set up a custom function for mixing up arrays of colors using DMA2D

#if (USE_TOUCH == 1)
	GUI_TOUCH_SetOrientation(DISPLAY_ORIENTATION);// Set orientation of touch screen
	GUI_TOUCH_Calibrate(GUI_COORD_X, 0, WIDTH  - 1, TOUCH_LEFT, TOUCH_RIGHT);// Calibrate touch screen
	GUI_TOUCH_Calibrate(GUI_COORD_Y, 0, HEIGHT - 1, TOUCH_TOP,  TOUCH_BOTTOM);
#endif
}
